# omni-wave

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
src/wavelet/: bior.rs  coif.rs  db.rs  sym.rs
